# whosat

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
tests/: test_actions_kill.py  test_aggregator.py  test_app_smoke.py  test_discovery.py  test_discovery_parse.py  test_docker_fallback.py  test_filters.py  test_name_resolution.py  test_status.py  test_theme_config.py
whosat/: app.py  cli.py  cli_output.py  config.py  constants.py  formatting.py  theme.py  types.py
whosat/collector/: docker.py  memory.py  system.py
whosat/services/: actions.py  aggregator.py  clipboard.py  conflicts.py  filters.py  name_resolution.py  path_display.py  refresh.py  status.py
whosat/ssh/: manager.py
whosat/styles/: whosat.tcss
whosat/widgets/: command_modal.py  confirm_modal.py  detail_panel.py  footer_bar.py  header_bar.py  memory_table.py  pill.py  process_table.py  refresh_bar.py  sidebar.py  sys_info_bar.py  toolbar.py
